tests/error/01_lexer_unexpected_char.mire
load kioto

pub fn main: () {
    set x = @#$%
}